@@ -270,6 +270,7 @@ global:
 	mpd_search_add_uri_constraint;
 	mpd_search_add_tag_constraint;
 	mpd_search_add_any_tag_constraint;
+	mpd_search_add_modified_since_constraint;
 	mpd_search_add_window;
 	mpd_search_commit;
 	mpd_search_cancel;
